Add links to recipes pages

--- a/index.html
+++ b/index.html
@@ -1,10 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <title>Odin Recipes</title>
-    </head>
-    <body>
-        <h1>Odin Recipes</h1>
-    </body>
+
+<head>
+    <meta charset="UTF-8">
+    <title>Odin Recipes</title>
+</head>
+
+<body>
+    <h1>Odin Recipes</h1>
+    <a href="./recipes/huveos-rancheros.html">Huevos Rancheros</a>
+    <a href="./recipes/lasagna.html">Lasagna</a>
+    <a href="./recipes/onigiri.html">Onigiri</a>
+    <a href="./recipes/spaghetti-with-meatballs.html">Spaghetti with Meatballs</a>
+</body>
+
 </html>
