--- a/recipes/spaghetti-with-meatballs.html
+++ b/recipes/spaghetti-with-meatballs.html
@@ -1,1 +1,55 @@
-<h1>Spaghetti with meatballs</h1>
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <title>Spaghetti with Meatballs</title>
+</head>
+
+<body>
+    <h1>Spaghetti with meatballs</h1>
+    <img src="../img/spaghetti-with-meatballs.jpg" alt="Spaghetti with meatballs">
+    <h2>Joelecr's all time favorite</h2>
+    <p>This is an Italian-style pasta sauce with homemade meatballs that's cooked slowly over low heat for an intense
+        tomato flavor. It's easy to make the spaghetti sauce ahead of time; gently reheat and add meatballs 30 minutes
+        before you're ready to serve with your favorite pasta.</p>
+
+    <h3>Ingredients</h3>
+    <h4>Meatballs:</h4>
+    <ul>
+        <li>1 pound lean ground beef</li>
+        <li>1 cup fresh bread crumbs</li>
+        <li>1 tablespoon dried parsley</li>
+        <li>1 tablespoon grated Parmesan chees</li>
+        <li>&frac14 teaspoon ground black pepper</li>
+        <li>⅛ teaspoon garlic powder</li>
+        <li>1 egg, beaten</li>
+    </ul>
+
+    <h4>Sauce:</h4>
+    <ul>
+        <li>¾ cup chopped onion</li>
+        <li>5 cloves garlic, minced</li>
+        <li>¼ cup olive oil</li>
+        <li>2 (28 ounce) cans whole peeled tomatoes</li>
+        <li>2 teaspoons salt</li>
+        <li>1 teaspoon white sugar</li>
+        <li>1 bay leaf</li>
+        <li>1 (6 ounce) can tomato paste</li>
+        <li>¾ teaspoon dried basil</li>
+        <li>½ teaspoon ground black pepper</li>
+    </ul>
+
+    <h3>Steps</h3>
+    <ol>
+        <li>Gather all ingredients.</li>
+        <li>In a large bowl, combine ground beef, bread crumbs, parsley, Parmesan, 1/4 teaspoon blackpepper. garlic powder and beaten egg. Mix well and form into 12 balls. Store, covered, in refrigerator until needed.</li>
+        <li>In a large sauceoan over medium heat, saute onion and garlic in olive oil until onion is translucent.</li>
+        <li>Stir in tomatoes, salt, sugar and bay leaf. Cover, reduce heat to low, and simmer 90 minutes.</li>
+        <li>Stir in tomato paste, basil, 1/2 teaspoon pepper and meatballs and simmer 30 minutes more.</li>
+        <li>Serve hot and enjoy</li>
+    </ol>
+</body>
+
+
+</html>
