Add list for recipes

--- a/index.html
+++ b/index.html
@@ -8,10 +8,14 @@
 
 <body>
     <h1>Odin Recipes</h1>
-    <a href="./recipes/huveos-rancheros.html">Huevos Rancheros</a>
-    <a href="./recipes/lasagna.html">Lasagna</a>
-    <a href="./recipes/onigiri.html">Onigiri</a>
-    <a href="./recipes/spaghetti-with-meatballs.html">Spaghetti with Meatballs</a>
+    <ul>
+        <li><a href="./recipes/spaghetti-with-meatballs.html">Spaghetti with Meatballs</a></li>
+        <li><a href="./recipes/onigiri.html">Onigiri</a></li>
+        <li><a href="./recipes/huveos-rancheros.html">Huevos Rancheros</a></li>
+    </ul>
+
+
+
 </body>
 
 </html>
