Modify huevos rancheros image size
Added height and width attributes to img element to keep aspect ratio

--- a/recipes/huevos-rancheros.html
+++ b/recipes/huevos-rancheros.html
@@ -8,7 +8,8 @@
 
 <body>
     <h1>Huevos Rancheros</h1>
-    <img src="../img/huevos-rancheros.jpg" alt="Huevos rancheros on top of corn tortillas with red sauce">
+    <img src="../img/huevos-rancheros.jpg" alt="Huevos rancheros on top of corn tortillas with red sauce" width="680"
+        height="auto">
     <h2>Once you taste them there is no coming back</h2>
     <p>This is the authentic Mexican version of fried eggs over fried tortillas layered with refried beans and tomato
         sauce.</p>
