--- a/index.html
+++ b/index.html
@@ -4,19 +4,18 @@
 <head>
     <meta charset="UTF-8">
     <title>Odin Recipes</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="./styles/style.css">
 </head>
 
 <body>
-    <h1>Odin Recipes</h1>
-    <ul>
-        <li><a href="./recipes/spaghetti-with-meatballs.html">Spaghetti with Meatballs</a></li>
-        <li><a href="./recipes/onigiri.html">Onigiri</a></li>
-        <li><a href="./recipes/huevos-rancheros.html">Huevos Rancheros</a></li>
-    </ul>
-
-
-
+    <div class="page-content">
+        <h1>Odin Recipes</h1>
+        <ul>
+            <li><a href="./recipes/spaghetti-with-meatballs.html">Spaghetti with Meatballs</a></li>
+            <li><a href="./recipes/onigiri.html">Onigiri</a></li>
+            <li><a href="./recipes/huevos-rancheros.html">Huevos Rancheros</a></li>
+        </ul>
+    </div>
 </body>
 
 </html>
