--- a/recipes/huevos-rancheros.html
+++ b/recipes/huevos-rancheros.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Huevos Rancheros</title>
+    <link rel="stylesheet" href="../styles/huevos-rancheros.css">
 </head>
 
 <body>
