--- a/recipes/onigiri.html
+++ b/recipes/onigiri.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Onigiri</title>
+    <link rel="stylesheet" href="../styles/onigiri.css">
 </head>
 
 <body>
