--- a/recipes/spaghetti-with-meatballs.html
+++ b/recipes/spaghetti-with-meatballs.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Spaghetti with Meatballs</title>
+    <link rel="stylesheet" href="../styles/spaghetti.css">
 </head>
 
 <body>
